--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Love+Ya+Like+A+Sister&display=swap");
+
 * {
     margin: 0;
     padding: 0;
@@ -18,11 +20,36 @@
 
 .dashboard {
     grid-row: 1/6;
-
     grid-column: 1/1;
+
     background-color: #263544;
 
-    border: 2px solid red;
+    box-shadow: 5px 10px 18px #888888;
+    margin: 5px 3px 5px 5px;
+
+    border-radius: .5rem;
+}
+.brand{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.brand-img img {
+    margin-top: 2rem;
+    /* margin-left: 20%; */
+
+    height: 150px;
+    width: 150px;
+}
+.brand-name p {
+    font-family: "Love Ya Like A Sister", cursive;
+
+    font-size: 2rem;
+    color: #008cba;
+
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .navbar {
@@ -32,22 +59,123 @@
 
     min-height: 10vh;
 
-    border: 2px solid red;
+    color: whitesmoke;
+    padding: 0rem 2rem;
+    box-shadow: 5px 10px 18px #888888;
+
+    margin: 5px;
 }
+
+a {
+    text-decoration: none;
+    font-family: "Love Ya Like A Sister", cursive;
+
+    color: #008cba;
+
+    font-size: 1.5rem;
+
+    cursor: pointer;
+}
+
+.navbar .container {
+    padding: 1rem;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+li {
+    list-style: none;
+}
+
+.dropbtn {
+    color: #008cba;
+    padding: 15px;
+    font-size: 16px;
+    border: 1px solid #008cba;
+    cursor: pointer;
+
+    border-radius: 50%;
+    text-transform: capitalize;
+}
+
+.dropbtn:focus {
+    outline: none;
+}
+
+.navbar .fas {
+    color: black;
+    margin-left: 10px;
+    cursor: pointer;
+}
+.dropdown {
+    cursor: pointer;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    right: 2.2rem;
+    top: 4.7rem;
+    background-color: #f9f9f9;
+    min-width: 60px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+
+    /* border: 2px solid #3cc78f; */
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 10px 10px;
+    text-decoration: none;
+    display: block;
+
+    text-align: center;
+
+    font-size: 1rem;
+}
+
+.dropdown-content a:hover {
+    color: red;
+}
+
+.caret:hover .dropdown-content {
+    display: block;
+}
+
+.fas:hover .dropbtn {
+    background-color: rgb(235, 235, 235);
+}
+
 .content {
-   
     grid-row: 2/5;
     grid-column: 2/6;
-  
+
     min-height: 100vh;
-    border: 2px solid red;
+    /* border: 2px solid red; */
+
+    box-shadow: 5px 10px 18px #888888;
+
+    margin: 20px 5px 10px 5px;
+
+    padding: 1rem;
 }
 
 .footer {
     grid-row: 5/6;
     grid-column: 2/6;
-  
-    min-height: 8vh;
 
-    border: 2px solid red;
+    min-height: 8vh;
+    font-size: 1.3rem;
+
+    background-color: #ededed;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    box-shadow: 5px 10px 18px #888888;
+    margin: 1px 5px 5px 5px;
 }
