--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -52,6 +52,34 @@
     margin-bottom: 1rem;
 }
 
+.operations{
+    margin-top: 4rem;
+
+    /* border: 2px solid red; */
+}
+.operations a{
+
+    text-decoration: none;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: whitesmoke;
+
+    font-size: 1.2rem;
+}
+
+.operations a:hover{
+    color: violet;
+}
+
+.tasks{
+padding: 3rem;}
+
+ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    flex-direction: column;
+}
 .navbar {
     grid-column: 2/6;
 
@@ -66,7 +94,7 @@
     margin: 5px;
 }
 
-a {
+.dropdown a {
     text-decoration: none;
     font-family: "Love Ya Like A Sister", cursive;
 
