--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -57,7 +57,7 @@
 
     /* border: 2px solid red; */
 }
-.operations a{
+.operations a {
 
     text-decoration: none;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -94,6 +94,14 @@ ul{
     margin: 5px;
 }
 
+h2{
+    font-family: "Love Ya Like A Sister", cursive;
+
+    color: #008cba;
+
+    font-size: 2.5rem;
+
+}
 .dropdown a {
     text-decoration: none;
     font-family: "Love Ya Like A Sister", cursive;
