--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -215,3 +215,10 @@ li {
     box-shadow: 5px 10px 18px #888888;
     margin: 1px 5px 5px 5px;
 }
+
+
+.content-container{
+    display: flex;
+    flex-direction: column;
+
+}
