--- a/public/css/detailemployee.css
+++ b/public/css/detailemployee.css
@@ -34,7 +34,7 @@ td {
 
 
 .detail-show button{
-  border: none;
+  border-radius: 5px;
  
   padding: 10px 25px;
   text-align: center;
@@ -46,10 +46,13 @@ td {
 
   background-color: white; 
   color: black; 
+
   border: 2px solid #f44336;
 }
 
 .detail-show button:hover {
+   
+
     background-color: #f44336;
     color: white;
   }
