completed home.blade.php

--- a/public/css/allemployee.css
+++ b/public/css/allemployee.css
@@ -65,3 +65,13 @@ td {
     color: rgb(187, 24, 51);
 
 }
+
+@media (max-width:1050px){
+/* .detail{
+    display: none;
+} */
+
+.all-show .detail{
+    margin: 0;
+}
+}
