--- a/public/css/detailemployee.css
+++ b/public/css/detailemployee.css
@@ -32,8 +32,37 @@ td {
     padding: 15px;
 }
 
+.buttons{
+    display: flex;
+    justify-content: space-around;
+}
 
-.detail-show button{
+.detail-edit button{
+  border-radius: 5px;
+ 
+  padding: 10px 25px;
+  text-align: center;
+  text-decoration: none;
+
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+
+  background-color: white; 
+  color: black; 
+
+  border: 2px solid #008CBA;
+}
+
+.detail-edit button:hover {
+   
+
+    background-color: #008CBA;
+    color: white;
+}
+
+
+.detail-delete button{
   border-radius: 5px;
  
   padding: 10px 25px;
@@ -50,9 +79,9 @@ td {
   border: 2px solid #f44336;
 }
 
-.detail-show button:hover {
+.detail-delete button:hover {
    
 
     background-color: #f44336;
     color: white;
-  }
+}
