--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -6,21 +6,25 @@
 }
 .homepage{
     background: #ffff;
-    min-height: 100vh;
+    /* min-height: 100vh; */
 
 }
-.container{
-    min-height: 100vh;
-}
+
 .nav {
     /* background: #ffff; */
 
+    position: sticky;
+    top: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
 
     min-height: 5rem;
     padding: 0.5rem 1rem;
+
+
+    box-shadow: 5px 10px 18px #888888;
+    margin: 5px 3px 5px 5px;
 }
 
 
@@ -73,17 +77,30 @@
 .fa-instagram {color: rgb(255, 0, 191);}
 .fa-github {color: rgb(255, 123, 0);}
 
+.welcome-content{
+
+    min-height: 100vh;
+    background-color: red;
+    border: 2px solid red;
+}
 
 .footer{
+
+
+    box-shadow: 5px 10px 18px #888888;
+    margin: 5px 3px 5px 5px;
+
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 10vh;
     background-color: #ededed;
 
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     font-weight: 600;
 }
+
+
 @media (max-width: 800px) {
     .nav .logo {
         flex-direction: column;
