--- a/public/css/welcome/welcome.css
+++ b/public/css/welcome/welcome.css
@@ -10,11 +10,10 @@
 
 }
 
+
 .nav {
     /* background: #ffff; */
 
-    position: sticky;
-    top: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -78,15 +77,17 @@
 .fa-github {color: rgb(255, 123, 0);}
 
 .welcome-content{
-
     min-height: 100vh;
-    background-color: red;
-    border: 2px solid red;
+
+    margin: 10px 5px;
+   
+    /* border: 2px solid red; */
+
+    box-shadow: 5px 10px 18px #888888;
+
 }
 
 .footer{
-
-
     box-shadow: 5px 10px 18px #888888;
     margin: 5px 3px 5px 5px;
 
