--- a/public/css/welcome/welcomehome.css
+++ b/public/css/welcome/welcomehome.css
@@ -1,2 +1,56 @@
+@import url("https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap");
 
+.welcomehome-container {
+    min-height: 50vh;
 
+    position: relative;
+}
+
+.mainimage img {
+    width: 100%;
+    height: 100%;
+}
+
+.overlay {
+    position: absolute;
+
+    background-color: whitesmoke;
+    opacity: 0.2;
+    width: 100%;
+    height: 100%;
+}
+
+.popular-description p {
+    font-size: 1.5rem;
+    color: #008cba;
+    padding-top: 1rem;
+    padding-left: 1rem;
+}
+
+.secondsection {
+    padding: 1rem;
+}
+.popular-cards {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.card {
+    min-height: 20rem;
+    max-width: 15rem;
+    border: 2px solid whitesmoke;
+    padding: 1rem;
+
+    margin-left: 3.5rem;
+    margin-top: 2rem;
+}
+
+.card:hover {
+    box-shadow: 5px 10px 18px #888888;
+}
+
+@media (max-width: 1000px) {
+    .welcomehome-container {
+        min-height: 30vh;
+    }
+}
