--- a/public/css/welcome/welcomeorder.css
+++ b/public/css/welcome/welcomeorder.css
@@ -1,6 +1,6 @@
 .order-container {
     min-height: 40rem;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 
     display: flex;
     flex-wrap: wrap;
