--- a/public/css/allorder.css
+++ b/public/css/allorder.css
@@ -1,7 +1,7 @@
 .all-show-order {
     padding: 1rem;
     min-height: 12rem;
-    max-width: 13rem;
+    max-width: 20rem;
 
     box-shadow: 5px 10px 18px #888888;
 
@@ -9,10 +9,15 @@
 
     display: flex;
     flex-wrap: wrap;
+
+    margin-left: 2rem;
 }
 .order-card{
     margin-bottom: 10;
 }
 .delorder button{
     margin-left: 1rem;
+}
+.ordercontainer{
+    display: flex;
 }
