--- a/public/css/welcome/welcome.css
+++ b/public/css/welcome/welcome.css
@@ -4,12 +4,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 .homepage{
     background: #ffff;
-    /* min-height: 100vh; */
-
 }
-
 
 .nav {
     display: flex;
@@ -19,7 +17,7 @@
     min-height: 5rem;
     padding: 0.5rem 1rem;
 
-   
+
     box-shadow: 5px 10px 18px #888888;
     margin: 5px 3px 5px 5px;
 }
@@ -28,7 +26,6 @@
 .nav .logo p{
     font-family: "Love Ya Like A Sister", cursive;
 
-    /* display: flex; */
     font-size: 2.2rem;
     color: #008cba;
     margin-left: 2rem;
@@ -36,6 +33,8 @@
 }
 .menu {
     margin-left: 5rem;
+
+    cursor: pointer;
 }
 
 .fas {
@@ -60,9 +59,9 @@
     color: rgb(163, 60, 60);
 }
 .cart:hover{
-    /* font-size: 2rem; */
     color: black;
 }
+
 .nav .openhamburger,
 .closehamburger,
 .mediaicons {
@@ -79,8 +78,6 @@
 
     margin: 10px 5px;
    
-    /* border: 2px solid red; */
-
     box-shadow: 5px 10px 18px #888888;
 
 }
@@ -122,6 +119,7 @@
 
         /*if display is flex */
         position: fixed;
+
         height: 100vh;
         width: 100vw;
         background: #ededed;
@@ -129,14 +127,18 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
+        z-index: 1;
+
+        border: 2px solid red;
     }
     .nav .closehamburger {
         display: inline;
 
         font-size: 2rem;
         position: absolute;
-        top: 1.3rem;
-        right: 3.2rem;
+        top: 1.5rem;
+        right: 4.5rem;
     }
     .menu  , .cart{
         margin-left: 0rem;
@@ -161,5 +163,4 @@
     .fa-instagram:hover {color: rgb(110, 46, 94);}
     .fa-github:hover {color: rgb(100, 67, 35);}
 
-    
 }
