--- a/public/css/welcome/welcomecontact.css
+++ b/public/css/welcome/welcomecontact.css
@@ -84,3 +84,17 @@ button:hover {
     margin-top: 1rem;
 }
 
+@media (max-width:800px){
+    h1{
+       font-size: 1.5rem;
+    
+    }
+    h2{
+        font-size: 1rem;
+    }
+
+    .contact-info{
+        min-height: 15rem;
+    }
+}
+
