--- a/public/css/welcome/welcomehome.css
+++ b/public/css/welcome/welcomehome.css
@@ -33,6 +33,7 @@
 .popular-cards {
     display: flex;
     flex-wrap: wrap;
+
 }
 
 .card {
@@ -43,6 +44,9 @@
 
     margin-left: 3.5rem;
     margin-top: 2rem;
+
+    cursor: pointer;
+
 }
 
 .card:hover {
