--- a/public/css/welcome/welcomeorder.css
+++ b/public/css/welcome/welcomeorder.css
@@ -1,6 +1,5 @@
 .order-container {
-    min-height: 40rem;
-    /* border: 2px solid red; */
+    min-height: 35rem;
 
     display: flex;
     flex-wrap: wrap;
@@ -11,7 +10,6 @@
 }
 
 .order-left {
-    /* border: 2px solid red; */
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
         0 17px 50px 0 rgba(0, 0, 0, 0.19);
     cursor: pointer;
@@ -23,10 +21,11 @@
     text-align: center;
     margin-top: 1rem;
     margin-bottom: 1rem;
+
+    text-transform: capitalize;
 }
 
 .order-right {
-    /* border: 2px solid red; */
     margin-top: 2rem;
 }
 
